# webapp

./: .gitignore  .gitmodules  Makefile  submodules.sh
src/: CMakeLists.txt
src/back-end/: CMakeLists.txt  enum_serializer.hpp  readme.txt  vbr_webapp_lib.cpp  vbr_webapp_lib.hpp  webapp_com.cpp  webapp_com.hpp  webapp_com_ctl.cpp  webapp_com_ctl.hpp  webapp_com_http.cpp  webapp_com_http.hpp  webapp_lib.cpp  webapp_lib.hpp  webapp_proto.cpp  webapp_proto.hpp  webapp_proto_http.cpp  webapp_proto_http.hpp
src/front-end/: CMakeLists.txt  core.js  demo_webapp.html
src/front-end/css/: widgets.css
src/front-end/widgets/: ui_button.js  ui_concept.js  ui_date_range.js  ui_file_dialog.js  ui_form.js  ui_invitation.js  ui_panel.js  ui_table.js
src/server/: CMakeLists.txt  vbr_webapp_server.cpp  webapp_server.cpp
src/test/: CMakeLists.txt  README.txt  com_ctl_test.cpp  com_http_test.cpp  com_test.cpp  proto_test.cpp  protocol_test.cpp  units_tests.cpp  vbr_webapp_test.cpp
